{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 15,
  "lineage": "411ba267-00fc-272e-e1b6-5e9de84c7d97",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b482c34c7c0aed0f",
            "arn": "arn:aws:ec2:us-east-1:365292474627:elastic-ip/eipalloc-0b482c34c7c0aed0f",
            "domain": "vpc",
            "id": "eipalloc-0b482c34c7c0aed0f",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-192-24-230.compute-1.amazonaws.com",
            "public_ip": "34.192.24.230",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "mani-nat-eip"
            },
            "tags_all": {
              "Name": "mani-nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365292474627:internet-gateway/igw-0ff5d1dba863bfa34",
            "id": "igw-0ff5d1dba863bfa34",
            "owner_id": "365292474627",
            "region": "us-east-1",
            "tags": {
              "Name": "mani-igw"
            },
            "tags_all": {
              "Name": "mani-igw"
            },
            "vpc_id": "vpc-065d8bbbe788181df"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b482c34c7c0aed0f",
            "association_id": "eipassoc-0ccd23ed0dfc5a6f5",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0babc5147487e9c05",
            "network_interface_id": "eni-0cbcb28183300e017",
            "private_ip": "10.0.1.143",
            "public_ip": "34.192.24.230",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e53859cf57c95c13",
            "tags": {
              "Name": "mani-nat-gateway"
            },
            "tags_all": {
              "Name": "mani-nat-gateway"
            },
            "vpc_id": "vpc-065d8bbbe788181df"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365292474627:route-table/rtb-049bed9a68040b02b",
            "id": "rtb-049bed9a68040b02b",
            "owner_id": "365292474627",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0babc5147487e9c05",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mani-private-rt"
            },
            "tags_all": {
              "Name": "mani-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-065d8bbbe788181df"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "365292474627",
            "id": "rtb-049bed9a68040b02b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365292474627:route-table/rtb-0e1602a5f0cc1ec55",
            "id": "rtb-0e1602a5f0cc1ec55",
            "owner_id": "365292474627",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ff5d1dba863bfa34",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mani-public-rt"
            },
            "tags_all": {
              "Name": "mani-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-065d8bbbe788181df"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "365292474627",
            "id": "rtb-0e1602a5f0cc1ec55",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08fed3bfdffd08228",
            "region": "us-east-1",
            "route_table_id": "rtb-049bed9a68040b02b",
            "subnet_id": "subnet-06cc45245181f86ee"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_1",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ef3d8b01bc5ebb5",
            "region": "us-east-1",
            "route_table_id": "rtb-049bed9a68040b02b",
            "subnet_id": "subnet-04e9ec90e2b1a886e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_2",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02826c96d10a94e81",
            "region": "us-east-1",
            "route_table_id": "rtb-0e1602a5f0cc1ec55",
            "subnet_id": "subnet-0e53859cf57c95c13"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ccfde8de5054a24f",
            "region": "us-east-1",
            "route_table_id": "rtb-0e1602a5f0cc1ec55",
            "subnet_id": "subnet-0d5610620f8a04abb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365292474627:subnet/subnet-06cc45245181f86ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06cc45245181f86ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "365292474627",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "mani-private-subnet-1"
            },
            "tags_all": {
              "Name": "mani-private-subnet-1"
            },
            "vpc_id": "vpc-065d8bbbe788181df"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "365292474627",
            "id": "subnet-06cc45245181f86ee",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365292474627:subnet/subnet-04e9ec90e2b1a886e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e9ec90e2b1a886e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "365292474627",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "mani-private-subnet-2"
            },
            "tags_all": {
              "Name": "mani-private-subnet-2"
            },
            "vpc_id": "vpc-065d8bbbe788181df"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "365292474627",
            "id": "subnet-04e9ec90e2b1a886e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365292474627:subnet/subnet-0e53859cf57c95c13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e53859cf57c95c13",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "365292474627",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "mani-public-subnet-1"
            },
            "tags_all": {
              "Name": "mani-public-subnet-1"
            },
            "vpc_id": "vpc-065d8bbbe788181df"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "365292474627",
            "id": "subnet-0e53859cf57c95c13",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365292474627:subnet/subnet-0d5610620f8a04abb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5610620f8a04abb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "365292474627",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "mani-public-subnet-2"
            },
            "tags_all": {
              "Name": "mani-public-subnet-2"
            },
            "vpc_id": "vpc-065d8bbbe788181df"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "365292474627",
            "id": "subnet-0d5610620f8a04abb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365292474627:vpc/vpc-065d8bbbe788181df",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04eafffa3de8cb721",
            "default_route_table_id": "rtb-0678367c00051bff7",
            "default_security_group_id": "sg-03a13676b7e9e1381",
            "dhcp_options_id": "dopt-08edb69c9262a75bd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-065d8bbbe788181df",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0678367c00051bff7",
            "owner_id": "365292474627",
            "region": "us-east-1",
            "tags": {
              "Name": "mani-vpc"
            },
            "tags_all": {
              "Name": "mani-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "365292474627",
            "id": "vpc-065d8bbbe788181df",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}